--- a/config/metadata/core_metadata.yaml
+++ b/config/metadata/core_metadata.yaml
@@ -21,3 +21,12 @@ attributes:
     predicate: http://id.loc.gov/vocabulary/relators/dpt
     index_keys:
       - "depositor_tesim"
+  logical_structure:
+    type: string
+    multiple: true
+    index_keys:
+      - "logical_structure_sim"
+      - "logical_structure_tesim"
+    form:
+      primary: false
+    predicate: http://vocabulary.samvera.org/ns#pcdmUse
