--- a/.koppie/Gemfile
+++ b/.koppie/Gemfile
@@ -39,6 +39,8 @@ gem 'turbolinks', '~> 5'
 gem 'twitter-typeahead-rails', '0.11.1.pre.corejavascript'
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'uglifier', '>= 1.3.0'
+gem "vite_rails"
+gem "vite_ruby", '~> 3.5.0'
 
 group :development do
   gem 'better_errors' # add command line in browser when errors
