--- a/.koppie/package.json
+++ b/.koppie/package.json
@@ -3,7 +3,20 @@
   "private": true,
   "repository": "git@github.com:samvera/hyrax.git",
   "dependencies": {
-    "universalviewer": "^3.1.4"
+    "@vitejs/plugin-vue": "^5",
+    "apollo-boost": "^0.1",
+    "axios": "^1.6.0",
+    "graphql": "^16",
+    "graphql-tag": "^2",
+    "lux-design-system": "^5",
+    "openseadragon": "^2",
+    "sass": "^1",
+    "universalviewer": "^3.1.4",
+    "vue": "^3",
+    "vue-loader": "^17",
+    "vue-select": "^3",
+    "vue2-dropzone": "^3",
+    "vuex": "^4"
   },
   "scripts": {
     "preinstall": "rm -rf ./public/uv",
@@ -11,5 +24,8 @@
     "uv-install": "cp -r ./node_modules/universalviewer/dist ./public/uv",
     "uv-config": "cp ./config/uv/uv.html ./public/uv/uv.html & cp ./config/uv/uv-config.json ./public/uv/"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "vite": "^5",
+    "vite-plugin-ruby": "^5"
+  }
 }
